--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,13 @@
 }
 
 /* /Layout columns */
+
+/* Nested elements layout */
+
+.container > .col-6 > .col-2,
+.container > .col-6 > .col-8,
+.container > .col-6 > .col-6 {
+  border: 1px solid white;
+}
+
+/* /Nested elements layout */
