--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,9 @@
 
 /* Nested elements layout */
 
-.container > .col-6 > .col-2,
-.container > .col-6 > .col-8,
-.container > .col-6 > .col-6 {
+.container > .col-6 > .container > .col-2,
+.container > .col-6 > .container > .col-8,
+.container > .col-6 > .container > .col-6 {
   border: 1px solid white;
 }
 
