--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,28 @@
 [class*="col-"] {
   background-color: #fec0cb;
   height: 130px;
+  line-height: 130px;
   border: 1px solid black;
+  text-align: center;
 }
 
 /* /Layout columns */
 
 /* Nested elements layout */
 
+.container > .col-6 > .container {
+  height: 100%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .container > .col-6 > .container > .col-2,
 .container > .col-6 > .container > .col-8,
 .container > .col-6 > .container > .col-6 {
+  height: 120px;
+  background-color: #f08080;
   border: 1px solid white;
 }
 
